--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,6 +46,7 @@ androidx-room-ktx = { group = "androidx.room", name ="room-ktx", version.ref = "
 androidx-room-compiler = { group = "androidx.room", name ="room-compiler", version.ref = "roomDatabase" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hiltDi" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hiltDi" }
+hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltNavigationCompose" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
